# sandbox-opengl-22

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  application_implementation.cpp  application_implementation.h  assimp_mesh.cpp  assimp_mesh.h  base_object.cpp  base_object.h  basic_sample_activity.cpp  basic_sample_activity.h  basic_shader_uniform.cpp  basic_shader_uniform.h  bitmap_font_render.cpp  bitmap_font_render.h  color_vertex_specification.h  constant.h  cstring_util.cpp  cstring_util.h  debug.h  font_shader_uniform.cpp  font_shader_uniform.h  fps.cpp  fps.h  frame.cpp  frame.h  game_data.h  game_debug.h  game_math.cpp  game_math.h  game_util.h  install.sh  key_callback_singleton.cpp  key_callback_singleton.h  learnopengl_lighting_directional_light_shader_uniform.cpp  learnopengl_lighting_directional_light_shader_uniform.h  lighting_example_activity.cpp  lighting_example_activity.h  (+44 more)
application/: application.cpp  application.h  frame.cpp  scene.h
application_scene/: application.cpp  application.h  application_context.h  scene.h
gl_app/: CMakeLists.txt  application.cpp  debug_util.cpp  frame.cpp  gl_debug.cpp  key_callback_singleton.cpp
gl_app/include/gl_app/: application.h  application_context.h  debug.h  debug_util.h  frame.h  gl.h  gl_debug.h  key_callback_singleton.h  preference.h  scene.h
glfw_wrap/: .gitignore  CMakeLists.txt
google_tests/: CMakeLists.txt  cstring_util_test.cpp  math_test.cpp
scene/: learn_open_gl_lighting_light_casters_scene.cpp  learn_open_gl_lighting_light_casters_scene.h  learn_open_gl_lighting_multiple_lights_scene.cpp  learn_open_gl_lighting_multiple_lights_scene.h  learn_open_gl_lighting_scene.cpp  learn_open_gl_lighting_scene.h  lighting_example_scene.cpp  lighting_example_scene.h  sample_scene.cpp  sample_scene.h  sandbox_scene.cpp  sandbox_scene.h  starting_scene.cpp  starting_scene.h
shader/: font.frag  font.vert  learnopengl_lighting_directional_light.frag  learnopengl_lighting_directional_light.vert  learnopengl_lighting_multiple_lights.frag  learnopengl_lighting_multiple_lights.vert  learnopengl_lighting_point_light.frag  learnopengl_lighting_spotlight.frag  practice_lighting_gouraud_shading.frag  practice_lighting_gouraud_shading.vert  practice_lighting_lighting_map.frag  practice_lighting_phong_shading.frag  sample_lighting_cube.frag  sample_lighting_cube.vert  texture.vert  texture_2d.frag  texture_2d.vert  vertex_color.vert  white_vertex.vert
shader_uniform/: basic_shader_uniform.cpp  basic_shader_uniform.h  font_shader_uniform.cpp  font_shader_uniform.h  learnopengl_lighting_directional_light_shader_uniform.cpp  learnopengl_lighting_directional_light_shader_uniform.h  learnopengl_lighting_multiple_lights.cpp  learnopengl_lighting_multiple_lights.h  learnopengl_lighting_multiple_lights_shader_uniform.cpp  learnopengl_lighting_multiple_lights_shader_uniform.h  learnopengl_lighting_point_light_shader_uniform.cpp  learnopengl_lighting_point_light_shader_uniform.h  learnopengl_lighting_spotlight_shader_uniform.cpp  learnopengl_lighting_spotlight_shader_uniform.h  practice_lighting_lighting_map_shader_uniform.cpp  practice_lighting_lighting_map_shader_uniform.h  practice_lighting_phong_shading_shader_uniform.cpp  practice_lighting_phong_shading_shader_uniform.h  shader_uniform.cpp  shader_uniform.h  texture_2d_shader_uniform.cpp  texture_2d_shader_uniform.h  texture_shader_uniform.cpp  texture_shader_uniform.h
vertex_specification/: color_vertex_specification.cpp  color_vertex_specification.h  position_and_normal_and_texcoord_vertex_specification.cpp  position_and_normal_and_texcoord_vertex_specification.h  position_vertex_specification.cpp  position_vertex_specification.h  position_with_normal_and_texcoord_vertex_specification.cpp  position_with_normal_and_texcoord_vertex_specification.h  position_with_normal_vector_vertex_specification.cpp  position_with_normal_vector_vertex_specification.h  texture_2d_vertex_specification.cpp  texture_2d_vertex_specification.h  texture_vertex_specification.cpp  texture_vertex_specification.h  vertex_specification.cpp  vertex_specification.h
